<resources>
    <string name="app_name">Assignment1</string>
    <string name="enter_info">Enter Info</string>
    <string name="view">View</string>
    <string name="exit">Exit</string>
    <string name="import_photo">Import Photo</string>
    <string name="name_photo">Name Photo</string>
    <string name="input_year_taken">Input Year Taken</string>
    <string name="input_photographer_s_name">Input Photographer\'s Name</string>
    <string name="done">Done</string>
    <string name="photographer_s_name">Photographer\'s Name</string>
    <string name="name">Name</string>
    <string name="photographer">Photographer</string>
    <string name="back">Back</string>
    <string name="name2">Name</string>
    <string name="photographer2">Photographer</string>
    <string name="textview">TextView</string>
    <string name="back2">Back</string>
    <string name="save1">Save</string>
    <string name="load_data">Load Data</string>
    <string name="name3">Name</string>
    <string name="photographer3">Photographer</string>
    <string name="year3">Year</string>
    <string name="back4">Back</string>


    <string-array name="years">
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
    </string-array>

</resources>
